style.class属性を仮想DOMを使って表示させる

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .active{
+      border: 1px solid red;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 </head>
 <body>
-  <!-- リアルDOM -->
-  <!-- <a id="google_link">googleへのリンク</a> -->
-
-  <div id="app">
-    {{ message }}
-    <a :href="google">googleのリンク</a>
-    <a :href="book.url">{{ book.title }}</a>
+  <div id="app"> <!--仮想DOM -->
+    <div :style="{fontSize:fontSize}">スタイルテスト</div>
+    <div :class="{active:isActive}">クラスのテキスト</div>
   </div>
 
   <script>
@@ -22,12 +23,8 @@
       el: '#app',  // 仮想DOM
       data(){
         return {
-          message: 'Hello Vue!',
-          google: 'https://google.com',
-          book: {
-            title: '本のタイトル',
-            url: 'https://google.com'
-          }
+          fontSize: '20px',
+          isActive: true
         }
       }
     })
