--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 </head>
 <body>
   <div id="app"> <!--仮想DOM -->
-    <div v-show="isDisplay">メッセージが届いています</div>
-    <div v-show="!isDisplay">falseになっています</div>
-
-    <div v-if="signal === 'red'">赤色です</div>
-    <div v-else-if="signal === 'yellow'">黄色です</div>
-    <div v-else-if="signal === 'blue'">青色です</div>
-    <div v-else>何ものでもありません</div>
   </div>
 
   <script>
@@ -28,9 +21,17 @@
       el: '#app',  // 仮想DOM
       data(){
         return {
-          isDisplay:true,
-          signal: 'red'
+          test: 'テストデータ'
         }
+      },
+      created(){
+        console.log('created')
+        console.log(this.$el)
+        console.log(this.test)
+      },
+      mounted(){
+        console.log('mounted')
+        console.log(this.$el)
       }
     })
   </script>
