--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="app"> <!--仮想DOM -->
     <p>{{ items[0].name }}</p>
-    <button id="b-button" :title="loggedInButton">
+    <button id="b-button" :disabled="!canBuy">
       購入
     </button>
   </div>
@@ -43,7 +43,8 @@
       el: '#app',
       data: {
         items: items,
-        loggedInButton: 'ログイン済みのため購入できます'
+        loggedInButton: 'ログイン済みのため購入できます',
+        canBuy: false
       }
     })
   </script>
