--- a/dom/index.html
+++ b/dom/index.html
@@ -5,16 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    .active{
-      border: 1px solid red;
-    }
-  </style>
+  <link rel="stylesheet" href="css/app.css">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 </head>
 <body>
   <div id="app"> <!--仮想DOM -->
-    <p>{{ items[0].name }}</p>
+    <p class="border-red">{{ items[0].name }}</p>
     <button id="b-button" :disabled="!canBuy">
       購入
     </button>
