--- a/section2/tab/index.html
+++ b/section2/tab/index.html
@@ -13,7 +13,7 @@
     <section class="tab">
       <ul class="tab__label">
         <li v-for="(item, id) in items" :key="item.id">
-          <a href="#" @click="activate(item.id)"
+          <a href="#" @click.prevent="activate(item.id)"
             :class="{active: active === item.id}"
           >{{ item.title }}</a>
         </li>
